--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".StoryActivity"
+            android:name=".ui.StoryActivity"
+            android:screenOrientation="portrait" 
             android:label="@string/title_activity_story" >
         </activity>
     </application>
